deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app1-app2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: node-app1
                port:
                  number: 3000
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: node-app2
                port:
                  number: 3000
